<resources>
    <string name="app_name">Slancho</string>
    <string name="app_version">Version %1$s</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up_account">Don\'t have an account? Sign up</string>
    <string name="sign_in_account">Already have an account? Sign in</string>
    <string name="sign_in_successful">Sign in successful</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="sign_in_anonymously">Continue without signing in</string>
    <string name="email_hint">Enter your email address</string>
    <string name="password_hint">Enter your password</string>
    <string name="password_confirmation_hint">Enter your password again</string>

    <string name="weather">Weather</string>
    <string name="news">News</string>
    <string name="search">Search</string>

    <!-- Preference Titles -->
    <string name="general_settings">General Settings</string>
    <string name="optional_settings">Optional Settings</string>

    <string name="location">Location</string>
    <string name="location_key">location</string>
    <string name="location_summary">Leave the field empty to fetch location automatically based on your current location</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="temperature_unit_key">temperature_unit_key</string>
    <string name="temperature_unit_default_value">metric</string>

    <string name="language">Language</string>
    <string name="language_key">language</string>
    <string name="language_default_value">en</string>
    
    <string name="fetch_data_title">Fetch weather data in the background</string>
    <string name="fetch_data_key">fetch_data_key</string>
    <string name="fetch_data_summary_on">Application will fetch weather data in the background</string>
    <string name="fetch_data_summary_off">Application will not fetch weather data in the background</string>

    <string name="forecast_data_for_days">Forecast data for number of days</string>
    <string name="forecast_data_for_days_key">forecast_data_for_days</string>
    <string name="forecast_data_for_days_default_value">7</string>

    <string name="connection_established">Connection Established!</string>

    <string name="current">Current</string>
    <string name="daily">Daily</string>
    <string name="three_hour">3 Hour</string>

    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
</resources>
