<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_settings">
        <EditTextPreference
            app:icon="@drawable/ic_location_primary_color"
            app:key="@string/location_key"
            app:title="@string/location"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/temperature_unit_default_value"
            app:entries="@array/temperature_unit_entries"
            app:entryValues="@array/temperature_unit_values"
            app:icon="@drawable/ic_snowflake_primary_color"
            app:key="@string/temperature_unit_key"
            app:title="@string/temperature_unit"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/language_default_value"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:icon="@drawable/ic_language_primary_color"
            app:key="@string/language_key"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_sync_primary_color"
            app:key="@string/fetch_data_key"
            app:summaryOff="@string/fetch_data_summary_off"
            app:summaryOn="@string/fetch_data_summary_on"
            app:title="@string/fetch_data_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/optional_settings">
        <SeekBarPreference
            android:max="16"
            app:adjustable="true"
            app:defaultValue="7"
            app:icon="@drawable/ic_calendar_number_of_days_primary_color"
            app:key="@string/forecast_data_for_days_key"
            app:min="1"
            app:title="@string/forecast_data_for_days" />
    </PreferenceCategory>

</PreferenceScreen>
